tests/snapshots/conformance__n_object_non_string_key.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{1:1}
stdout --- 
<empty>
stderr --- 
error: expected key or closed curly brace, found `1`
 --> stdin:1:2
  |
1 | {1:1}
  | -^
  | |
  | expected due to `{`
